--- a/spring-boot-database/src/main/resources/c3p0.properties
+++ b/spring-boot-database/src/main/resources/c3p0.properties
@@ -1,6 +1,6 @@
-c3p0.jdbcUrl=jdbc:postgresql://47.95.38.220:5432/zabbix
+c3p0.jdbcUrl=jdbc:postgresql://127.0.0.1:5432/zabbix
 c3p0.user=zabbix
-c3p0.password=zabbix@123
+c3p0.password=
 c3p0.driverClass=org.postgresql.Driver
 c3p0.minPoolSize=2
 c3p0.maxPoolSize=10
