--- a/spring-boot-database/src/main/resources/druid.properties
+++ b/spring-boot-database/src/main/resources/druid.properties
@@ -1,5 +1,5 @@
 ## 自定义 数据库配置信息，https://github.com/alibaba/druid/tree/master/druid-spring-boot-starter
-spring.datasource.druid.db-type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.DbType=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/jpa?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.druid.username=root
