--- a/spring-boot-jpa/pom.xml
+++ b/spring-boot-jpa/pom.xml
@@ -18,20 +18,28 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<druid-spring-boot-starter.version>1.2.4</druid-spring-boot-starter.version>
 	</properties>
 
 
 	<dependencies>
 		<dependency>
-			<groupId>com.jachs</groupId>
-			<artifactId>spring-boot-database</artifactId>
-			<version>0.0.1</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid-spring-boot-starter.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
