--- a/spring-boot-web-socket/pom.xml
+++ b/spring-boot-web-socket/pom.xml
@@ -6,12 +6,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.6.7</version>
+		<relativePath />
 	</parent>
+	
 	<groupId>com.jachs</groupId>
 	<artifactId>spring-boot-web-socket</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>spring-boot-web-socket</name>
 	<description>Demo project for Spring Boot</description>
 
